<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="title_activity">CrimeActivity</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crimes_title">Crimes</string>

    <string name="date_picker_title">Date of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>

    <string name="take">Take</string>
    <string name="crime_suspect">Choose Suspect</string>
    <string name="crime_report">Send Crime Report</string>
    <string name="report_content">This is crime report!!!!!!%1$s, %2$s</string>
    <string name="report_subject">Criminalintent report</string>
    <string name="send_report_title">Criminalintent report</string>

</resources>
